[gd_scene load_steps=4 format=3 uid="uid://bd7yp5fjqu0u7"]

[ext_resource type="PackedScene" uid="uid://bimjavdw4ifpw" path="res://scenes/windows/window_base.tscn" id="1_sard5"]
[ext_resource type="Script" path="res://scenes/windows/confirmation/window_confirmation.gd" id="2_xqcg0"]
[ext_resource type="Theme" uid="uid://b1v6gwakv465t" path="res://scenes/windows/window.tres" id="3_1gqf2"]

[node name="window_confirmation" instance=ExtResource("1_sard5")]
title = "Aktion Bestätigen"
size = Vector2i(300, 150)
always_on_top = true
script = ExtResource("2_xqcg0")

[node name="description_label" type="Label" parent="content/v_box" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_1gqf2")
text = "Soll Kunde XYZ wirklich geloescht werden?"
autowrap_mode = 2

[node name="buttons" type="HBoxContainer" parent="content/v_box" index="1"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("3_1gqf2")

[node name="cancel_button" type="Button" parent="content/v_box/buttons" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_1gqf2")
text = "Abbrechen"

[node name="confirm_button" type="Button" parent="content/v_box/buttons" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_1gqf2")
text = "Bestätigen"

[connection signal="pressed" from="content/v_box/buttons/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="content/v_box/buttons/confirm_button" to="." method="_on_confirm_button_pressed"]
